New Title New Songs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>My Spotify</title>
+        <title>Muzicf</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="stil.css">
@@ -28,14 +28,28 @@
             <li>Chiamo io chiami tu-Gaia</li>
         </div>
         </div>
-        <div class="Melodii">
-             <img id="imagine1"  onclick="schimba(1)" src="cover6.jpg" alt="Imagine"/>
-             <img id="imagine1"  onclick="schimba(2)"  src="cover7.jpg" alt="Imagine"/>
-             <img id="imagine1"  onclick="schimba(3)"  src="cover8.jpg" alt="Imagine"/>
-             <img id="imagine1"  onclick="schimba(4)" src="cover9.jpg" alt="Imagine"/>
-             <img id="imagine1"  onclick="schimba(5)"  src="cover10.jpg" alt="Imagine"/>
-             <img id="imagine1"  onclick="schimba(6)"  src="cover11.png" alt="Imagine"/>
+     <h3>Melodiile tale</h3>
+        <div class="Melodii" id="Mel" onmouseover="filtru1()">
+             <img class="imagine1" onmouseover="filtru(0)" onmouseout="nu()"  onclick="schimba(1)" src="cover6.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(1)" onmouseout="nu()" onclick="schimba(2)"  src="cover7.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(2)" onmouseout="nu()" onclick="schimba(3)"  src="cover8.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(3)" onmouseout="nu()" onclick="schimba(4)" src="cover9.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(4)" onmouseout="nu()" onclick="schimba(5)"  src="cover10.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(5)" onmouseout="nu()" onclick="schimba(6)"  src="cover11.png" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(6)" onmouseout="nu()" onclick="schimba(7)"  src="cover1.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(7)" onmouseout="nu()" onclick="schimba(8)"  src="cover2.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(8)" onmouseout="nu()" onclick="schimba(9)"  src="cover3.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(9)" onmouseout="nu()" onclick="schimba(10)"  src="cover4.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(10)" onmouseout="nu()" onclick="schimba(11)"  src="cover5.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(11)" onmouseout="nu()" onclick="schimba(12)"  src="cover12.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(0)" onmouseout="nu()"  onclick="schimba(1)" src="cover6.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(1)" onmouseout="nu()" onclick="schimba(2)"  src="cover7.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(2)" onmouseout="nu()" onclick="schimba(3)"  src="cover8.jpg" alt="Imagine"/>
+
             </div>
+            <footer>
+                <p>&copy;Marincas Rares All Rights Reserved</p>
+            </footer>
         <script src="script.js" async defer></script>
     </body>
 </html>
