New Gallery of Covers

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Muzicf</title>
+        <title>Muzicfy</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="stil.css">
@@ -28,7 +28,7 @@
             <li>Chiamo io chiami tu-Gaia</li>
         </div>
         </div>
-     <h3>Melodiile tale</h3>
+     <h3>Your songs</h3>
         <div class="Melodii" id="Mel" onmouseover="filtru1()">
              <img class="imagine1" onmouseover="filtru(0)" onmouseout="nu()"  onclick="schimba(1)" src="cover6.jpg" alt="Imagine"/>
              <img class="imagine1" onmouseover="filtru(1)" onmouseout="nu()" onclick="schimba(2)"  src="cover7.jpg" alt="Imagine"/>
@@ -42,13 +42,34 @@
              <img class="imagine1" onmouseover="filtru(9)" onmouseout="nu()" onclick="schimba(10)"  src="cover4.jpg" alt="Imagine"/>
              <img class="imagine1" onmouseover="filtru(10)" onmouseout="nu()" onclick="schimba(11)"  src="cover5.jpg" alt="Imagine"/>
              <img class="imagine1" onmouseover="filtru(11)" onmouseout="nu()" onclick="schimba(12)"  src="cover12.jpg" alt="Imagine"/>
-             <img class="imagine1" onmouseover="filtru(0)" onmouseout="nu()"  onclick="schimba(1)" src="cover6.jpg" alt="Imagine"/>
-             <img class="imagine1" onmouseover="filtru(1)" onmouseout="nu()" onclick="schimba(2)"  src="cover7.jpg" alt="Imagine"/>
-             <img class="imagine1" onmouseover="filtru(2)" onmouseout="nu()" onclick="schimba(3)"  src="cover8.jpg" alt="Imagine"/>
-
+             <img class="imagine1" onmouseover="filtru(12)" onmouseout="nu()"  onclick="schimba(1)" src="cover6.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(13)" onmouseout="nu()" onclick="schimba(2)"  src="cover7.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(14)" onmouseout="nu()" onclick="schimba(3)"  src="cover8.jpg" alt="Imagine"/>
+        </div>
+             <h3>Ballad</h3>
+        <div class="Melodii" style="overflow: hidden;" id="Mel" onmouseover="filtru1()">
+             <img class="imagine1" onmouseover="filtru(15)" onmouseout="nu()" onclick="schimba(4)" src="cover9.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(16)" onmouseout="nu()" onclick="schimba(7)"  src="cover1.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(17)" onmouseout="nu()" onclick="schimba(9)"  src="cover3.jpg" alt="Imagine"/>
             </div>
+             <h3>Dance</h3>
+        <div class="Melodii" style="overflow: hidden;" id="Mel" onmouseover="filtru1()">
+             <img class="imagine1" onmouseover="filtru(18)" onmouseout="nu()" onclick="schimba(10)" src="cover4.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(19)" onmouseout="nu()" onclick="schimba(5)"  src="cover10.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(20)" onmouseout="nu()" onclick="schimba(8)"  src="cover2.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(21)" onmouseout="nu()"  onclick="schimba(1)" src="cover6.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(22)" onmouseout="nu()" onclick="schimba(2)"  src="cover7.jpg" alt="Imagine"/>
+             <img class="imagine1" onmouseover="filtru(23)" onmouseout="nu()" onclick="schimba(11)"  src="cover5.jpg" alt="Imagine"/>
+            </div>
+                <h3>Bops</h3>
+        <div class="Melodii" style="overflow: hidden;" id="Mel" onmouseover="filtru1()">
+            <img class="imagine1" onmouseover="filtru(24)" onmouseout="nu()" onclick="schimba(7)"  src="cover1.jpg" alt="Imagine"/>
+            <img class="imagine1" onmouseover="filtru(25)" onmouseout="nu()" onclick="schimba(12)"  src="cover12.jpg" alt="Imagine"/>
+            <img class="imagine1" onmouseover="filtru(26)" onmouseout="nu()" onclick="schimba(11)"  src="cover5.jpg" alt="Imagine"/>
+            <img class="imagine1" onmouseover="filtru(27)" onmouseout="nu()" onclick="schimba(3)"  src="cover8.jpg" alt="Imagine"/>
+        </div>
             <footer>
-                <p>&copy;Marincas Rares All Rights Reserved</p>
+                &copy;Marincas Rares All Rights Reserved
             </footer>
         <script src="script.js" async defer></script>
     </body>
