--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </section>
         </div>
             <footer>
-                &copy;Marincas Rares All Rights Reserved
+                &copy;<a href="https://www.instagram.com/rares_marincas/">Marincas Rares</a> All Rights Reserved
             </footer>
         <script src="script.js" async defer></script>
     </body>
